# esp32-pros3-voice

./: CMakeLists.txt  README.md  sdkconfig
components/ewth_hardware_driver/: CMakeLists.txt  idf_component.yml
components/ewth_hardware_driver/boards/ewth_pros3/: bsp_board.c
components/ewth_hardware_driver/boards/include/: bsp_board.h  ewth_pros3_board.h
components/hardware_driver/boards/esp32s3-ewth-pros3-voice/: README.md  bsp_board.c  esp32_s3_ewth_pros3_voice_board.h
components/hardware_driver/boards/esp32s3-ewth-pros3-voice/include/: esp32_s3_ewth_pros3_voice_board.h
data/: commands_en.txt
main/: CMakeLists.txt  idf_component.yml  main.c  speech_actions.c
main/include/: speech_actions.h
